Update info pertaining to 2021 event

--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -101,22 +101,44 @@
   <h4>Where will Royal Vegas Retreat 2021 take place?</h4>
   <p>Royal Vegas Retreat will take place at the MGM Grand Resort and Casino in Las Vegas, Nevada, United States of America.</p>
   <h4>Is Royal Vegas Retreat an all-ages event?</h4>
-  <p>Royal Vegas Retreat attendees must be 13 or over to buy a ticket. However, VIP ticket holders must be over 21 at the time of the event to attend the VIP-exclusive before- and after-parties.</p>
+  <p>Royal Vegas Retreat attendees must be 13 or over to buy a ticket. However, VIP ticket holders must be over 21 at the time of the event to attend the VIP-exclusive before- and after-parties. We expect the majority of our attendees to be adults over 21. Minors should travel with a guardian, parent, or trusted person over 21.</p>
+  <h4>How do I learn about updates?</h4>
+<p><a href="https://buttondown.email/prettyprincessclub">Subscribe to our blog+email list</a> to get the latest information about Royal Vegas Retreat 2021 before it hits social media!</p>
+<h4>How do I support Pretty Princess Club and Royal Vegas Retreat?</h4>
+<p>Buy some merch or send us a donation at our <a href="https://shop.prettyprincess.club">shop</a>, and become a paid subscriber to our <a href="https://buttondown.email/prettyprincessclub">blog+email list!</a></p>
+  <h4>How will this event be affected by COVID-19?</h4>
+  <p>As a result of COVID-19, we held <a href="../virtual.html">an online event in 2020</a> and postponed our event to 2021. We are making <a href="https://buttondown.email/prettyprincessclub/archive/whats-changing-for-rvr-2021/">a number of immediate changes</a> to ensure the safety of our event. Please see <a href="https://buttondown.email/prettyprincessclub/archive/whats-changing-for-rvr-2021/">our post on Buttondown</a> to understand those changes.</p>
   <h3 class="section-header">The Venue</h3>
+  <p>See also <a href="./venue.html">our venue page</a>.</p>
+  <h4>How do I reseve my room onsite?</h4>
+  <p>Use our <a href="https://book.passkey.com/go/sroy1121mg">Passkey portal</a>: <a href="https://book.passkey.com/go/sroy1121mg">https://book.passkey.com/go/sroy1121mg</a> to reserve your room by October 19, 2021.</p>
   <h4>Where is the Royal Vegas Retreat room block?</h4>
   <p>We will be at the <a href="https://www.mgmgrand.com">MGM Grand Hotel and Casino, Las Vegas</a>.</p>
   <h4>How much does a room in the MGM Grand room block cost?</h4>
   <p>Room rates for this event start at $158/night.</p>
+  <h4>Can I cancel my room reservation prior to the event?</h4>
+  <p>You can cancel your reservation via the <a href="https://book.passkey.com/go/sroy1121mg">Passkey portal</a> up to 72 hours prior to the event with no charge.</p> 
   <h4>Can I reserve a room for the night before and check out after the event is over?</h4>
-  <p>Yes! We have set aside rooms for Thursday, November 18 and Sunday, November 21 (to check out Monday, November 22). We are planning some fun mini-events before and after the main convention - both for VIPs and GA ticket holders. We highly encourage you to come in early to get your bearings and stay late for a relaxing trip home!</p>
+  <p>Yes! We have set aside rooms for Thursday, November 18 and Sunday, November 21 (to check out Monday, November 22). We highly encourage you to come in early to get your bearings and stay late for a relaxing trip home! We still hope to plan pre- and post-convention informal events for VIPs and GA ticketholders, but our content schedule is subject to change as a result of COVID-19.</p>
   <h3 class="section-header">Registration</h3>
-  <p>See <a href="./reg.html">our main registration page</a> for more information.</p>
+  <p>See also <a href="./reg.html">our main registration page</a>.</p>
   <h4>Where do I buy my ticket?</h4>
-  <p>Please see our <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite page</a> to purchase your ticket once sales open.
-  <h4>When can I buy a ticket?</h4>
-  <p>Given the current state of the global pandemic, we will pause ticket sales until we have more information about the safety of in-person events in 2021.</p>
+  <p>Please see our <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite page</a> to purchase your ticket once sales open on June 26, 2021.</p>
+  <h4>How will ticket sales work in 2021?</h4>
+  <p>Ticket reservations will open on <b>June 26th at 12:00 PM PT</b>. At this time, you will be able to <b>reserve your GA or VIP ticket</b> on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>. (Our Eventbrite page still shows us as postponed right now - don't worry! We will be making updates behind the scenes to prepare for ticket sales.)</p>
+  <p><b>GA tickets</b> will cost <b>$5</b> to reserve. <b>VIP tickets</b> will cost <b>$20</b> to reserve. Only GA and VIP tickets will be available during the reservation period.</p>
+  <p>The reservation period ends <b>July 31st or when we sell out of tickets</b>.</p>
+  <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>.</p> 
+  <p>In addition, if any tickets remain after the reservation period, or if we are able to increase our attendance cap, we will offer <b>GA, VIP, and Limited-Access Partner Pass tickets</b> at full price. Prices are as follows:
+    <ul>
+      <li><b>GA</b>: $125</li>
+      <li><b>VIP</b>: $200</li>
+      <li><b>Partner Pass</b>: $20</li>
+    </ul>
+  </p>
+  <p>We are no longer offering Sunday-only tickets. The Partner Pass is a special ticket type for partners of attendees who do not wear J-fashion. Partner Pass ticketholders are not required to adhere to the dress code. However, they may only access the vendors' area and fashion show content.</p>
   <h4>I have a discount code for a ticket. When can I use it?</h4>
-  <p>You can use a discount code to buy your ticket anytime while ticket sales are open.</p>
+  <p>You can use a discount code to buy your ticket anytime while full-price ticket sales are open. You cannot use your discount code on ticket reservations.</p>
   <h4>Will you sell single-day tickets?</h4>
   <p>At this time we do not plan to sell single-day tickets.</p>
   <h4>Will you sell tickets at the event?</h4>
@@ -124,9 +146,11 @@
   <h4>I tried to use a discount code to buy my ticket, but it didn't work! What do I do?</h4>
   <p>Oh no! <a href="../contact.html">Contact us</a> right away, and provide a picture of your promo code. We will fix it ASAP!</p>
   <h4>I bought a ticket, but it turns out I can't go to Royal Vegas Retreat. Can I get a refund?</h4>
-  <p>Since we are postponing our event, we will allow refunds on tickets until October 1st 2020. All tickets already purchased and not refunded are automatically valid for our 2021 event.</p>
+  <p>We will allow refunds, no questions asked, between October 16 and November 17 2021. This is to allow attendees to make a safe choice regarding their attendance this year.</p>
   <h4>I have a discount code for a ticket, but I won't be able to go to Royal Vegas Retreat. Can I give the ticket to a friend?</h4>
   <p>Yes! As long as you haven't already used your code to buy a ticket, you can gift it to a friend.</p>
+  <h4>Do I need a VIP ticket to attend the Sunday afternoon tea party?</h4>
+  <p>No! The tea party is included with all GA and VIP tickets by default.</p>
   <h3 class="section-header">Dress Code Policy</h3>
   <h4>What is the dress code policy for Royal Vegas Retreat 2021?</h4>
   <p>Our dress code for Royal Vegas Retreat 2021 is as follows:</p>
@@ -143,8 +167,6 @@
   <p>Yes! The MGM Grand offers mobility scooters for rent, but you'll have to call ahead to reserve one - see the MGM Grand contact information here: <a href="https://mgmgrand.mgmresorts.com/en/contact-us.html">https://mgmgrand.mgmresorts.com/en/contact-us.html</a></p>
   <h3 class="section-header"></a>Schedule and Programming</h3>
   <p>Coming soon!  For now, see our <a href="./programming.html">Programming</a> page for more details.</p>
-  <h3 class="section-header">How will this event be affected by COVID-19?</h3>
-  <p>As a result of COVID-19, we are postponing our event to November 19 - 22 2021. We are cautiously optimistic that the world will be a better and safer place by then. This was a difficult decision for us to make, but we care deeply about the safety of our guests and the accessibility of our event, and as such, we believe postponement is necesssary.</p>
   <h3 class="section-header">Volunteering and Sponsorship</h3>
   <p>Are you interested in lending your skills to the success of Royal Vegas Retreat? <a href="./volunteers.html">Visit the Volunteers page</a> or <a href="../contact.html">contact us directly!</a></p>
   <p>We are always looking for sponsors who can donate small gifts for contest prizes and other perks for our guests. <a href="../contact.html">Contact us</a> anytime if you're interested in sponsoring our event.</p>
