--- a/event/reg.html
+++ b/event/reg.html
@@ -97,24 +97,20 @@
   <h1 class="sec01">
   <h1>RVR Registration</h1>
   <hr>
-  <p>As we are postponing our event until 2021, ticket sales are currently closed.</p>
-  <p>All tickets already purchased for our 2020 event are automatically eligible for our 2021 event.</p>
-  <p>If you need a refund on your ticket, please contact <a href="mailto:registration@prettyprincess.club">registration@prettyprincess.club</a> by <b>October 1, 2020</b>.</p>
-  <!--<p>You can purchase your ticket on our <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite page</a>.
-  <p>We are offering refunds on any ticket, no questions asked. Since we are currently planning to stick to our original dates, we understand if you need to change your plans at the last minute as a result of your own health.</p>
-  <p>Early Bird tickets are <b>SOLD OUT!</b></p>
-  <h2>Main Registration</h2>
-  <p>General ticket sales start <b>June 13, 2020 at 12:00PST.</b></p>
-  <p><b>GA Tickets:</b> $125</p>
-  <p><b>VIP Tickets:</b> $200</p>
-  <p><b>Partner Pass:</b> $20</p>
-  <p><b>Sunday Only (for locals and Sin City Anime Con attendees):</b> $60</p>
-  <p>GA tickets include access to the entire event, including all panels, fashion shows, vendors' rooms, contests, games, and the Sunday tea party.</p>
-  <p>VIP tickets include access to the entire event, plus an exclusive jewelry piece from our sponsor (to be announced!), priority seating throughout the event, access to exclusive before- and after-party events, a VIP photoshoot with Instagram feature, and more!</p>
-  <p>Partner passes are <b>limited-access tickets for spouses, partners, family, and friends who do not plan to wear J-fashion.</b> These special passes only allow access to the vendors' room and fashion shows. Attendees with a partner pass <b>do not have to adhere to the dress code</b>.</p>
-  <p>Sunday Only tickets are intended for Las Vegas locals and Sin City Anime Con (formerly Sabakon) attendees interested in Royal Vegas Retreat. This ticket only allows access to the Sunday afternoon tea party, as well as the Vendors' Room and Sunday Panels. Sunday Only ticketholders must adhere to the event dress code - see our <a href="./event-faq.html">event FAQ page</a> for more details.</p>
+  <p>Ticket reservations will open on <b>June 26th at 12:00 PM PT</b>. At this time, you will be able to <b>reserve your GA or VIP ticket</b> on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>. (Our Eventbrite page still shows us as postponed right now - don't worry! We will be making updates behind the scenes to prepare for ticket sales.)</p>
+  <p><b>GA tickets</b> will cost <b>$5</b> to reserve. <b>VIP tickets</b> will cost <b>$20</b> to reserve. Only GA and VIP tickets will be available during the reservation period.</p>
+  <p>The reservation period ends <b>July 31st or when we sell out of tickets</b>.</p>
+  <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>.</p> 
+  <p>In addition, if any tickets remain after the reservation period, or if we are able to increase our attendance cap, we will offer <b>GA, VIP, and Limited-Access Partner Pass tickets</b> at full price. Prices are as follows:
+    <ul>
+      <li><b>GA</b>: $125</li>
+      <li><b>VIP</b>: $200</li>
+      <li><b>Partner Pass</b>: $20</li>
+    </ul>
+  </p>
+  <p>We are no longer offering Sunday-only tickets. The Partner Pass is a special ticket type for partners of attendees who do not wear J-fashion. Partner Pass ticketholders are not required to adhere to the dress code. However, they may only access the vendors' area and fashion show content.</p>
   <p>We are proud to announce that we have an official room block with the MGM Grand with an excellent event rate. Please visit our <a href="./venue.html">Room Block and Venue</a> page for more information and to make your reservation with the MGM Grand now!</p>
-  <p>Please see our <a href="./event-faq.html">Event FAQ</a> page for common questions about registration.</p>-->
+  <p>Please see our <a href="./event-faq.html">Event FAQ</a> page for common questions about registration.</p>
   <hr>
 
 </div>
