--- a/vegas.html
+++ b/vegas.html
@@ -116,9 +116,9 @@
 <p>Alice falls down a rabbit hole - this time, into Las Vegas. Surrounded by unfamiliar sights and sounds, she sets out to explore, and finds mad hatters, white rabbits, games and cards, mysterious bottles, queens and kings, caterpillars chain-smoking over penny slots, strange grinning cats, and more...</p>
 <p><b>Please note that you do not have to dress in accordance to the theme at Royal Vegas Retreat 2021</b> - only adhere to our dress code, described in <a href="https://prettyprincess.club/event/event-faq.html">our event FAQ</a>.</p>
 <h2 class="section-header"></a>Where do I sign up?</h2>
-<p>As we are postponing our event, ticket sales and room block bookings are currently closed. Stay tuned for updates in 2021!</p>
+<p>Ticket reservations for 2021 begin June 26, 2021 on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>, and you can reserve your room onsite at the MGM Grand right now via <a href="https://book.passkey.com/go/sroy1121mg">our Passkey portal</a>. See our <a href="./event/reg.html">registration</a>, <a href="./event/venue.html">venue</a>, and <a href="./event/event-faq.html">event FAQ</a> pages for more information.</p>
 <h2 class="section-header">What about COVID-19?</h2>
-<p>As a result of COVID-19, we are postponing our event until 2021.</p>
+  <p>As a result of COVID-19, we held <a href="../virtual.html">an online event in 2020</a> and postponed our event to 2021. We are making <a href="https://buttondown.email/prettyprincessclub/archive/whats-changing-for-rvr-2021/">a number of immediate changes</a> to ensure the safety of our event. Please see <a href="https://buttondown.email/prettyprincessclub/archive/whats-changing-for-rvr-2021/">our post on Buttondown</a> to understand those changes.</p>
 <h2 class="section-header">How do I learn about updates?</h2>
 <p><a href="https://buttondown.email/prettyprincessclub">Subscribe to our blog+email list</a> to get the latest information about Royal Vegas Retreat 2021 before it hits social media!</p>
 <h2 class="section-header">How do I support Pretty Princess Club and Royal Vegas Retreat?</h2>
