Update footer; add ticket info to FAQ

--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -137,6 +137,12 @@
     </ul>
   </p>
   <p>We are no longer offering Sunday-only tickets. The Partner Pass is a special ticket type for partners of attendees who do not wear J-fashion. Partner Pass ticketholders are not required to adhere to the dress code. However, they may only access the vendors' area and fashion show content.</p>
+  <h4>Why do I have to reserve a ticket first? Why is the process for buying a ticket different?</h4>
+  <p>We are offering this reserve option to help mitigate the risk involved in committing to an event while the global pandemic is ongoing. In the event that we cannot hold our event safely, those who reserved a ticket in 2021 will be refunded. In the interim, we only require you to put down a minimal down payment.</p>
+  <h4>I bought a ticket in 2020. Is it still good for 2021?</h4>
+  <p>Yes! All tickets purchased in 2020 have automatically been rolled over to 2021. However, you will need to rebook your room onsite using our <a href="https://book.passkey.com/go/sroy1121mg">Passkey portal</a>.</p>
+  <h4>What are the perks associated with VIP tickets?</h4>
+  <p>VIP ticketholders get a premium goody bag with gifts from our sponsors, access to exclusive before- and after-parties, and priority seating for afternoon tea and all content. We will provide specific details in the coming months as we get closer to our event. The remaining VIP tickets are in very short supply, so set an alarm if you want one!</p>
   <h4>I have a discount code for a ticket. When can I use it?</h4>
   <p>You can use a discount code to buy your ticket anytime while full-price ticket sales are open. You cannot use your discount code on ticket reservations.</p>
   <h4>Will you sell single-day tickets?</h4>
@@ -183,7 +189,7 @@
 <script type="text/javascript" src="../js/mdb.min.js"></script>
 
 <div class="footer">
-  <p class="copyright">© 2019 - 2020 Pretty Princess Club, LLC</p>
+  <p class="copyright">© 2019 - 2021 Pretty Princess Club, LLC</p>
   <div class="footer-social-icons">
       <h6 class="social-block">Follow us on</h6>
       <ul class="social-icons">
