Update tourist page; update registration page

--- a/event/reg.html
+++ b/event/reg.html
@@ -108,6 +108,7 @@
       <li><b>Partner Pass</b>: $20</li>
     </ul>
   </p>
+  <p>VIP ticketholders receive an exclusive premium goody bag with gifts from our sponsors, access to exclusive before- and after-parties, and priority seating for afternoon tea and all content.</p>
   <p>We are no longer offering Sunday-only tickets. The Partner Pass is a special ticket type for partners of attendees who do not wear J-fashion. Partner Pass ticketholders are not required to adhere to the dress code. However, they may only access the vendors' area and fashion show content.</p>
   <p>We are proud to announce that we have an official room block with the MGM Grand with an excellent event rate. Please visit our <a href="./venue.html">Room Block and Venue</a> page for more information and to make your reservation with the MGM Grand now!</p>
   <p>Please see our <a href="./event-faq.html">Event FAQ</a> page for common questions about registration.</p>
