Add snapwidget to vegas main page

--- a/vegas.html
+++ b/vegas.html
@@ -128,6 +128,11 @@
 <h2 class="section-header">Our Sponsors</h2>
 <p><a href="https://bbandb.net/"><img src="images/bbandb_blk.png" class="img-fluid" alt="BB&B logo"/></a></p>
 <p><a href="https://arda-wigs.com/"><img src="images/arda-logo.png" width="200" class="img-fluid" alt="Arda Wigs logo"/></a><a href="https://kanekoshop.com/"><img src="images/kaneko.png" width="200" class="img-fluid" alt="Kaneko logo"/></a></p>
+    <hr id ="insta">
+  <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
+<!-- SnapWidget -->
+<script src="https://snapwidget.com/js/snapwidget.js"></script>
+<iframe src="https://snapwidget.com/embed/875015" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
 </center>
 </div>
 <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
