Clarify COVID restrictions on main page and FAQ

--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -108,6 +108,7 @@
 <p>Buy some merch or send us a donation at our <a href="https://shop.prettyprincess.club">shop</a>, and become a paid subscriber to our <a href="https://buttondown.email/prettyprincessclub">blog+email list!</a></p>
   <h4>How will this event be affected by COVID-19?</h4>
   <p>As a result of COVID-19, we held <a href="../virtual.html">an online event in 2020</a> and postponed our event to 2021. We are making <a href="https://buttondown.email/prettyprincessclub/archive/whats-changing-for-rvr-2021/">a number of immediate changes</a> to ensure the safety of our event. Please see <a href="https://buttondown.email/prettyprincessclub/archive/whats-changing-for-rvr-2021/">our post on Buttondown</a> to understand those changes.</p>
+  <p>The situation with respect to COVID is changing rapidly, and we are already re-evaluating several of the changes set out in the blog post above. The one thing that ABSOLUTELY will not change is that ALL ATTENDEES MUST BE FULLY VACCINATED TO ATTEND ROYAL VEGAS RETREAT 2021. "Fully vaccinated" means that it has been at least 2 weeks since their final dose of vaccine. Attendees must show proof of vaccination to pick up their badge. Attendees arriving from inside the US must show their vaccine card. Please stay tuned for concrete guidance on proof of vaccination for attendees outside of the US.</p>
   <h3 class="section-header">The Venue</h3>
   <p>See also <a href="./venue.html">our venue page</a>.</p>
   <h4>How do I reseve my room onsite?</h4>
